--- a/index.html
+++ b/index.html
@@ -7,5 +7,7 @@
 </head>
 <body>
     <h3>New Feature</h3>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Soluta, officiis modi natus nobis commodi id eius qui. Minus est deleniti ullam dolorem, nostrum provident similique rerum aut aliquam illum vitae.</p>
+    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Optio rem veritatis ab consectetur dicta est quidem, aliquam nesciunt nostrum delectus. Nesciunt dolores doloribus quam odit quos itaque molestias possimus voluptatibus.</p>
 </body>
 </html>
