--- a/index.html
+++ b/index.html
@@ -4,10 +4,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Neptune github one</title>
+    <style>
+        h3{
+            color: chocolate;
+        }
+    </style>
 </head>
 <body>
     <h3>New Feature</h3>
+    <h5>First Lorem</h5>
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Soluta, officiis modi natus nobis commodi id eius qui. Minus est deleniti ullam dolorem, nostrum provident similique rerum aut aliquam illum vitae.</p>
+    <h5>First Lorem</h5>
     <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Optio rem veritatis ab consectetur dicta est quidem, aliquam nesciunt nostrum delectus. Nesciunt dolores doloribus quam odit quos itaque molestias possimus voluptatibus.</p>
+    <h5>First Lorem</h5>
+    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Laboriosam deserunt recusandae, architecto dolores voluptatum laborum provident explicabo ab. Incidunt consequatur minima laboriosam itaque dolorem eos, a nostrum tenetur numquam repudiandae.</p>
 </body>
 </html>
