h5 styling and content correction

--- a/index.html
+++ b/index.html
@@ -8,15 +8,18 @@
         h3{
             color: chocolate;
         }
+        h5{
+            color: darkgreen;
+        }
     </style>
 </head>
 <body>
     <h3>New Feature</h3>
     <h5>First Lorem</h5>
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Soluta, officiis modi natus nobis commodi id eius qui. Minus est deleniti ullam dolorem, nostrum provident similique rerum aut aliquam illum vitae.</p>
-    <h5>First Lorem</h5>
+    <h5>Second Lorem</h5>
     <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Optio rem veritatis ab consectetur dicta est quidem, aliquam nesciunt nostrum delectus. Nesciunt dolores doloribus quam odit quos itaque molestias possimus voluptatibus.</p>
-    <h5>First Lorem</h5>
+    <h5>Third Lorem</h5>
     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Laboriosam deserunt recusandae, architecto dolores voluptatum laborum provident explicabo ab. Incidunt consequatur minima laboriosam itaque dolorem eos, a nostrum tenetur numquam repudiandae.</p>
 </body>
 </html>
