--- a/index.html
+++ b/index.html
@@ -7,9 +7,11 @@
     <style>
         h3{
             color: chocolate;
+            font-size: xx-large;
         }
         h5{
             color: darkgreen;
+            font-size: larger;
         }
     </style>
 </head>
